<resources>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="Home">Home</string>
    <string name="Library">Library</string>
    <string name="Profile">Profile</string>
    <string name="UpdateProfile">Update Profile</string>
    <string name="Study_sets">Study sets</string>
    <string name="Public">Public</string>
    <string name="Folders">Folders</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_name">Quizzme</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
    <string name="lbl_sign_in">Sign In</string>
    <string name="msg_already_have_an">Already have an account?</string>
    <string name="lbl_email">Email</string>
    <string name="msg_or_sign_in">-- Or sign in with Email and Password --</string>
    <string name="msg_confirm_passwor">Confirm Password</string>
    <string name="lbl_sign_up">Sign Up</string>
    <string name="lbl_remember_me">Remember me</string>
    <string name="lbl_password">Password</string>
    <string name="lbl_sign_in_by">Sign in by</string>
    <string name="msg_forgot_password">Forgot Password ?</string>
    <string name="lbl_name">Name</string>
    <string name="lbl_save">Save</string>
    <string name="msg_create_new_topi">Create new topic</string>
    <string name="lbl_description">Description</string>
    <string name="msg_a_sentence_of_d">A sentence of description</string>
    <string name="lbl_vietnamese">Vietnamese</string>
    <string name="lbl_meaning">Meaning</string>
    <string name="lbl_english">English</string>
    <string name="lbl_1">1</string>
    <string name="msg_insert_your_top">Insert your topic here</string>
    <string name="lbl_terminology">Terminology</string>
    <string name="msg_edit_terminolog">Edit terminology</string>
    <string name="lbl_cancel">Cancel</string>
    <string name="msg_description_op">Description (Optional)</string>
    <string name="lbl_term">Term</string>
    <string name="lbl_apply">Apply</string>

    <string name="lbl_hippopotamus">Hippopotamus</string>
    <string name="lbl_congrats">Congrats!</string>
    <string name="lbl_previous">Swipe Previous</string>
    <string name="lbl_h_p_p_t_m_s">/hɪpəˈpɒtəməs/</string>
    <string name="lbl_play_game_now">Back to Topic</string>
    <string name="lbl_con_s_t">Con sư tử</string>
    <string name="lbl_next">Swipe Next</string>
    <string name="lbl_la_n">/ˈlaɪən/</string>
    <string name="lbl_h_m">Hà Mã</string>
    <string name="lbl_topic_name">Topic Name</string>
    <string name="msg_congratulations">Hope this set will help you! </string>
    <string name="lbl_lion">Lion</string>
    <string name="previous">Previous</string>

    <string name="lbl_landon_mosby">Landon Mosby</string>
    <string name="lbl_7_50_am">7:50 am</string>
    <string name="lbl_man_marin">Man Marin</string>
    <string name="lbl_2_15_pm">2:15 pm</string>
    <string name="lbl_6_15_pm">6:15 pm</string>
    <string name="lbl_jacklyn_kovach">Jacklyn Kovach</string>
    <string name="lbl_6_30_am">6:30 am</string>
    <string name="lbl_ali_comer">Ali Comer</string>
    <string name="lbl_kai_caudle">Kai Caudle</string>
    <string name="lbl_4_00_pm">4:00 pm</string>
    <string name="msg_carmelo_roussea">Carmelo Rousseau</string>
    <string name="lbl_3_45_pm">3:45 pm</string>
    <string name="lbl_11_50_am">11:50 am</string>
    <string name="lbl_join_group">Join Group</string>
    <string name="lbl_rose_j_henry">Rose J. Henry</string>
    <string name="lbl_user_groups">User Groups</string>
    <string name="msg_congratulations2">Congratulations on learning all the new words! </string>
    <string name="msg_take_the_quiz_n">Take the quiz now!</string>

    <string name="lbl_2">2</string>
    <string name="lbl_3">3</string>
    <string name="lbl_display_name">Display name</string>
    <string name="lbl_first_name">No data</string>
    <string name="lbl_second_name">No data</string>
    <string name="lbl_username">Username</string>
    <string name="lbl_my_profile"> Update profile</string>
    <string name="lbl_a_gmail_com">a@gmail.com</string>
    <string name="lbl_third_name">No data</string>
    <string name="lbl_change_password">Change Password</string>
    <string name="lbl_username2">username</string>

    <string name="lbl_your_points">Your Points</string>
    <string name="lbl_game">Game</string>
    <string name="lbl_1000_pts">1000 pts.</string>
    <string name="lbl_s_t">Sư tử</string>
    <string name="lbl_l_f_nt">/ˈɛlɪfənt/</string>
    <string name="lbl_vocabulary_quiz">Vocabulary Quiz</string>
    <string name="lbl_g_u">Gấu</string>
    <string name="lbl_h_u">Hươu</string>
    <string name="lbl_vocabulary">Vocabulary</string>
    <string name="lbl_elephant">Elephant</string>
    <string name="lbl_con_voi">Con voi</string>
    <string name="lbl_level_3">Level 3</string>
    <string name="shuffle_mode">Shuffle Mode</string>

    <string name="lbl_popular_topic">Popular Topic</string>
    <string name="msg_join_thousands">Join thousands of learners</string>
    <string name="lbl_your_score">Your score</string>
    <string name="lbl_highest_score">Highest score</string>
    <string name="lbl_username1">Username</string>
    <string name="lbl_4_hours_ago">4 hours ago</string>
    <string name="lbl_krystald">KrystalD</string>
    <string name="lbl_welcome_back">Welcome back to  </string>
    <string name="lbl_topic_name1">Topic Name</string>
    <string name="msg_recently_access">Recently Accessed Topic</string>
    <string name="lbl_00">00</string>
    <string name="lbl_start_now">START NOW</string>
</resources>