<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:gravity="center_horizontal"
    android:id="@+id/linearDialog"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical" style="@style/groupStylewhite_A700">
    <LinearLayout android:gravity="center_horizontal"
        android:id="@+id/linearColumnwaitingcat"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/_261pxv"
        android:layout_marginEnd="@dimen/_29pxh"
        android:layout_marginStart="@dimen/_29pxh"
        android:layout_marginTop="@dimen/_20pxv"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700cornerRadius_1">
        <FrameLayout android:id="@+id/frameWaiting"
            android:layout_gravity="start"
            android:layout_height="@dimen/_148pxv"
            android:layout_width="@dimen/_302pxh" style="@style/groupStyleindigo_A100cornerRadius">
            <ImageView android:id="@+id/imageWaitingCat"
                android:layout_gravity="center"
                android:layout_height="@dimen/_131pxh"
                android:layout_marginBottom="@dimen/_8pxv"
                android:layout_marginEnd="@dimen/_40pxh"
                android:layout_marginStart="@dimen/_40pxh"
                android:layout_marginTop="@dimen/_8pxv"
                android:layout_width="@dimen/_133pxh"
                android:scaleType="fitXY"
                android:src="@drawable/tap-waiting"/>
        </FrameLayout>
        <TextView android:ellipsize="end"
            android:gravity="center_horizontal"
            android:id="@+id/txtEditterminolog"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_22pxh"
            android:layout_marginStart="@dimen/_22pxh"
            android:layout_marginTop="@dimen/_22pxv"
            android:layout_width="match_parent"
            android:singleLine="true"
            android:text="@string/msg_edit_terminolog"
            style="@style/txtRubikWetPaintregular20" tools:text="@string/msg_edit_terminolog"/>
        <EditText android:background="@android:color/transparent"
            android:ellipsize="end"
            android:hint="@string/msg_description_op"
            android:id="@+id/etDescription" android:inputType="text"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_22pxh"
            android:layout_marginStart="@dimen/_22pxh"
            android:layout_marginTop="@dimen/_18pxv"
            android:layout_width="match_parent"
            android:singleLine="true"
            android:textColorHint="@color/bluegray_900"
            style="@style/etSolidOutline" tools:ignore="Autofill"/>
        <EditText android:background="@android:color/transparent"
            android:ellipsize="end" android:hint="@string/lbl_term"
            android:id="@+id/etRowenglish" android:inputType="text"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_22pxh"
            android:layout_marginStart="@dimen/_22pxh"
            android:layout_marginTop="@dimen/_12pxv"
            android:layout_width="match_parent"
            android:singleLine="true"
            android:textColorHint="@color/gray_800"
            style="@style/etregular12" tools:ignore="Autofill"/>
        <LinearLayout android:gravity="center_vertical"
            android:id="@+id/linearRowcancel"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_22pxh"
            android:layout_marginStart="@dimen/_22pxh"
            android:layout_marginTop="@dimen/_34pxv"
            android:layout_width="match_parent" android:orientation="horizontal">
            <androidx.appcompat.widget.AppCompatButton
                android:ellipsize="end" android:gravity="center"
                android:id="@+id/btnCancel"
                android:layout_height="@dimen/_36pxv"
                android:layout_width="@dimen/_101pxh"
                android:singleLine="true"
                android:text="@string/lbl_cancel"
                android:textAllCaps="false"
                style="@style/btnSolidRounded_2" tools:text="@string/lbl_cancel"/>
            <androidx.appcompat.widget.AppCompatButton
                android:ellipsize="end" android:gravity="center"
                android:id="@+id/btnVietnameseOne"
                android:layout_height="@dimen/_36pxv"
                android:layout_marginStart="@dimen/_20pxh"
                android:layout_width="@dimen/_101pxh"
                android:singleLine="true"
                android:text="@string/lbl_apply"
                android:textAllCaps="false"
                style="@style/btnSolidRounded_1_2" tools:text="@string/lbl_apply"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>