<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:gravity="center_horizontal">

    <LinearLayout
        android:id="@+id/frameTest"
        android:layout_width="@dimen/_336pxh"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="@dimen/_4pxh"
        android:layout_marginTop="@dimen/_20pxv"
        android:layout_marginEnd="@dimen/_3pxh"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageFrame115"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_226pxh"
                android:layout_gravity="start"
                android:scaleType="fitXY"
                android:src="@drawable/img_frame115"
                tools:ignore="ContentDescription"
                tools:src="@drawable/img_frame115" />

            <LinearLayout
                android:id="@+id/linearColumnelephant"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="@dimen/_30pxh"
                android:layout_marginTop="@dimen/_25pxv"
                android:layout_marginEnd="@dimen/_20pxh"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtQuestionTitle"
                    style="@style/txtOpenSansromansemibold48"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4pxv"
                    android:ellipsize="end"
                    android:gravity="center_horizontal"
                    android:text="@string/lbl_hippopotamus" />

                <TextView
                    android:id="@+id/txtDescription"
                    style="@style/txtOpenSansromanregular18"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_2pxv"
                    android:layout_marginStart="@dimen/_7pxh"
                    android:layout_marginEnd="@dimen/_7pxh"
                    android:ellipsize="end"
                    android:lineSpacingExtra="@dimen/_5pxh"
                    android:singleLine="false"
                    android:gravity="center_horizontal"
                    android:text="@string/lbl_l_f_nt"
                    tools:text="@string/lbl_l_f_nt" />

                <ImageView
                    android:id="@+id/imgSound"
                    android:layout_width="@dimen/_50pxh"
                    android:layout_height="@dimen/_50pxh"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="@dimen/_17pxh"
                    android:layout_marginTop="@dimen/_25pxv"
                    android:layout_marginEnd="@dimen/_17pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_group4122"
                    tools:ignore="ContentDescription"
                    tools:src="@drawable/img_group4122" />
            </LinearLayout>
        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30pxh"
            android:layout_gravity="top|center"
            android:gravity="top"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn1"
                style="@style/btnSolidRoundedOutline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:lineSpacingExtra="@dimen/_8pxh"
                android:paddingStart="@dimen/_30pxh"
                android:paddingTop="@dimen/_13pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingBottom="@dimen/_13pxv"
                android:singleLine="true"
                android:text="@string/lbl_g_u"
                android:textAllCaps="false"
                tools:text="@string/lbl_g_u" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn2"
                style="@style/btnSolidRoundedOutline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15pxh"
                android:ellipsize="end"
                android:gravity="center"
                android:lineSpacingExtra="@dimen/_8pxh"
                android:paddingStart="@dimen/_30pxh"
                android:paddingTop="@dimen/_13pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingBottom="@dimen/_13pxv"
                android:singleLine="true"
                android:text="@string/lbl_s_t"
                android:textAllCaps="false"
                tools:text="@string/lbl_s_t" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn3"
                style="@style/btnSolidRoundedOutline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15pxh"
                android:ellipsize="end"
                android:gravity="center"
                android:lineSpacingExtra="@dimen/_8pxh"
                android:paddingStart="@dimen/_30pxh"
                android:paddingTop="@dimen/_13pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingBottom="@dimen/_13pxv"
                android:singleLine="true"
                android:text="@string/lbl_con_voi"
                android:textAllCaps="false"
                tools:text="@string/lbl_con_voi" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn4"
                style="@style/btnSolidRoundedOutline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15pxh"
                android:ellipsize="end"
                android:gravity="center"
                android:paddingStart="@dimen/_30pxh"
                android:paddingTop="@dimen/_13pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingBottom="@dimen/_13pxv"
                android:singleLine="true"
                android:text="@string/lbl_h_u"
                android:textAllCaps="false"
                tools:text="@string/lbl_h_u" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>