<?xml version="1.0" encoding="UTF-8"?>
    <LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
        android:gravity="center_horizontal"
        android:id="@+id/linearSignUpPage"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStyleWhite_A700">
        <pl.droidsonroids.gif.GifImageView
            android:id="@+id/imgFluffy"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_120pxh"
            android:layout_marginEnd="@dimen/_30pxh"
            android:layout_marginStart="@dimen/_30pxh"
            android:layout_marginTop="@dimen/_12pxv"
            android:layout_width="@dimen/_120pxh"
            android:scaleType="fitXY"
            android:src="@drawable/cute"/>
        <LinearLayout android:gravity="start"
            android:id="@+id/linearColumnsignup"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_27pxv"
            android:layout_marginEnd="@dimen/_30pxh"
            android:layout_marginStart="@dimen/_30pxh"
            android:layout_marginTop="@dimen/_10pxv"
            android:layout_width="match_parent" android:orientation="vertical">
            <TextView android:ellipsize="end"
                android:id="@+id/txtSignUp"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_34pxh"
                android:layout_marginStart="@dimen/_34pxh"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@string/lbl_sign_up"
                style="@style/txtRobotoRegular24" tools:text="@string/lbl_sign_up"/>
            <TextView android:ellipsize="end" android:id="@+id/txtName"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_13pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@string/lbl_name"
                style="@style/txtRobotoRegular15_2" tools:text="@string/lbl_name"/>
            <EditText
                android:background="@drawable/rectangle_bg_white_a700_border_bluegray_100_radius_4"
                android:ellipsize="end" android:id="@+id/edtName"
                android:inputType="text"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_9pxv"
                android:layout_width="match_parent"
                android:singleLine="true"
                style="@style/etSolidRoundedOutline"/>
            <TextView android:ellipsize="end" android:id="@+id/txtEmail"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_15pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@string/lbl_email"
                style="@style/txtRobotoRegular16" tools:text="@string/lbl_email"/>
            <EditText
                android:background="@drawable/rectangle_bg_white_a700_border_bluegray_100_radius_4"
                android:ellipsize="end"
                android:id="@+id/edtEmail"
                android:inputType="text"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8pxv"
                android:layout_width="match_parent"
                android:singleLine="true"
                style="@style/etSolidRoundedOutline"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtPassword"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_15pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@string/lbl_password"
                style="@style/txtRobotoRegular15_2" tools:text="@string/lbl_password"/>
            <EditText
                android:id="@+id/edtPassword"
                android:background="@drawable/rectangle_bg_white_a700_border_bluegray_100_radius_4"
                android:ellipsize="end"
                android:inputType="text"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_9pxv"
                android:layout_width="match_parent"
                android:singleLine="true"
                style="@style/etSolidRoundedOutline" />
            <TextView android:ellipsize="end"
                android:id="@+id/txtConfirmPassword"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_15pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@string/msg_confirm_passwor"
                style="@style/txtRobotoRegular15_2" tools:text="@string/msg_confirm_passwor"/>
            <EditText
                android:background="@drawable/rectangle_bg_white_a700_border_bluegray_100_radius_4"
                android:ellipsize="end"
                android:id="@+id/edtConfirmPassword"
                android:inputType="textPassword"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_9pxv"
                android:layout_width="match_parent"
                android:singleLine="true"
                style="@style/etSolidRoundedOutline"/>

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:id="@+id/progressBar"
                android:visibility="gone"
                android:paddingTop="10dp"
                android:paddingBottom="7dp"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSignUp"
                style="@style/btnSolidRounded_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_24pxv"
                android:ellipsize="end"
                android:gravity="center"
                android:paddingStart="@dimen/_30pxh"
                android:paddingTop="@dimen/_11pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingBottom="@dimen/_11pxv"
                android:singleLine="true"
                android:text="@string/lbl_sign_up"
                android:textAllCaps="false"
                tools:ignore="TextSizeCheck"
                tools:text="@string/lbl_sign_up" />
            <LinearLayout android:gravity="start"
                android:id="@+id/linearRowconfirmation"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_32pxh"
                android:layout_marginStart="@dimen/_34pxh"
                android:layout_marginTop="@dimen/_25pxv"
                android:layout_width="match_parent" android:orientation="horizontal">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtConfirmation"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_1pxv"
                    android:layout_weight="0.79"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@string/msg_already_have_an"
                    style="@style/txtRobotoRegular16" tools:text="@string/msg_already_have_an"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtSignIn"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_1pxh"
                    android:layout_marginTop="@dimen/_1pxv"
                    android:layout_weight="0.21"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@string/lbl_sign_in"
                    style="@style/txtRobotoRegular16_1" tools:text="@string/lbl_sign_in"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
